chore: initial React Native project setup for handwriting math app
- Initialize React Native 0.82 with New Architecture enabled
- Set up project directory structure (app/, native-modules/, tests/, etc.)
- Configure TypeScript, ESLint, and Prettier
- Create .env.example template with API configuration
- Update package.json with metadata and custom scripts
- Create comprehensive README.md with setup instructions
- Move existing docs (PRD, ARCHITECTURE, TASK_LIST) to docs/ folder
- Install dependencies and configure iOS pods
- Add CLAUDE.md for AI development assistance

PR1: Project Setup & Configuration Complete

--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "handwritingMathApp",
-  "version": "0.0.1",
+  "name": "handwriting-math-app",
+  "version": "0.1.0",
   "private": true,
+  "description": "A React Native tablet app for handwriting math solutions with step-by-step validation and intelligent tutoring",
+  "author": "Superbuilders <rafal.szulejko@superbuilders.school>",
+  "license": "UNLICENSED",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "lint": "eslint .",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest tests/unit",
+    "test:component": "jest tests/component",
+    "clean": "rm -rf node_modules ios/Pods ios/build android/build android/app/build",
+    "clean:ios": "cd ios && xcodebuild clean && cd ..",
+    "postinstall": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "react": "19.1.1",
