--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,25 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# API keys and secrets
+**/*.key
+**/*.pem
+**/google-services.json
+**/GoogleService-Info.plist
+
+# Editor directories
+.vscode/
+.idea/
+
+# Sentry
+.sentryclirc
+
+# Temporary test files
+*.tmp
+*.temp
