feat: implement handwriting canvas with Skia, gesture handling, and tablet-optimized UI
This commit implements PR2 with comprehensive tablet UI enhancements:

Core Canvas Features:
- Hardware-accelerated Skia canvas (120 FPS capable)
- Pressure-sensitive stylus/touch input with gesture handler
- 5 color options (black, blue, red, green, purple)
- Eraser tool with 3x pen width
- Horizontal line guides for organized writing
- Smooth stroke rendering with quadratic curves

Tablet UI Enhancement:
- True edge-to-edge fullscreen canvas (no letterboxing)
- Native iPad support (TARGETED_DEVICE_FAMILY = "1,2")
- Responsive toolbar sizing (80×400px iPad, 60×200px iPhone)
- Draggable floating toolbar (9 snap positions)
- Show/hide toolbar with floating toggle button
- Welcome modal (first launch only, AsyncStorage)
- Full portrait/landscape orientation support
- Professional tablet-first UI design

iOS Configuration:
- SafeAreaProvider with edges=[] to disable auto-padding
- StatusBar translucent for true fullscreen
- UIDeviceFamily in Info.plist for native iPad support
- AppDelegate orientation support method
- LaunchScreen updated for all orientations
- TARGETED_DEVICE_FAMILY in Xcode project

Files Created:
- app/components/HandwritingCanvas.tsx
- app/components/FloatingToolbar.tsx
- app/components/WelcomeModal.tsx
- app/components/ToggleButton.tsx
- app/screens/CanvasDemoScreen.tsx
- app/hooks/useStylus.ts
- app/utils/pressureUtils.ts
- app/types/Canvas.ts

Files Modified:
- App.tsx (SafeAreaProvider config, StatusBar)
- package.json (added Skia, gesture-handler, AsyncStorage)
- ios/handwritingMathApp/Info.plist
- ios/handwritingMathApp/AppDelegate.swift
- ios/handwritingMathApp/LaunchScreen.storyboard
- ios/handwritingMathApp.xcodeproj/project.pbxproj
- docs/TASK_LIST.md

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "postinstall": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.82.1",
+    "@shopify/react-native-skia": "^2.3.10",
     "react": "19.1.1",
     "react-native": "0.82.1",
-    "@react-native/new-app-screen": "0.82.1",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
