feat: implement MyScript Cloud API for handwriting recognition (PR3 core infrastructure)
Implements handwriting recognition infrastructure using MyScript Cloud API
instead of ML Kit native bridge for faster MVP delivery and superior math
recognition quality.

## Core Components Added

### API Integration
- MyScript Cloud REST API client with HMAC-SHA512 authentication
- Stroke data conversion (internal format → MyScript format)
- Request/response handling with error management
- Configurable timeout and retry logic

### Recognition System
- Pause detection (500ms configurable trigger)
- Confidence threshold enforcement (>85% target)
- Debouncing to prevent duplicate API calls
- Line splitting for multi-line equations
- Recognition result formatting utilities

### State Management
- Zustand store for canvas and recognition state
- Optimized selectors for performance
- Recognition history tracking
- Pause detection timer management

### UI Components
- RecognitionIndicator: displays status, results, confidence scores
- ManualInputFallback: modal for manual input when recognition fails
- Animated transitions for smooth UX

### Documentation
- Comprehensive setup guide (docs/MYSCRIPT_SETUP.md)
- Technical summary (docs/PR3_SUMMARY.md)
- API integration examples and troubleshooting

## Dependencies Added
- axios ^1.7.9 - HTTP client for API calls
- crypto-js ^4.2.0 - HMAC authentication
- zustand ^5.0.2 - State management
- @types/crypto-js ^4.2.2 - TypeScript types

## Design Decision
Switched from ML Kit (5-7 days, offline) to MyScript Cloud API (1-2 days,
online) based on user preference for ease and speed over offline support.
MyScript provides superior math recognition with native LaTeX output.

## Files Created
- app/types/MyScript.ts (200 lines)
- app/utils/myScriptUtils.ts (250 lines)
- app/utils/myScriptClient.ts (300 lines)
- app/utils/recognitionUtils.ts (280 lines)
- app/stores/canvasStore.ts (200 lines)
- app/components/RecognitionIndicator.tsx (180 lines)
-

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,11 @@ APP_ENV=development
 # ENABLE_VOICE_HINTS=false
 # ENABLE_CLOUD_SYNC=false
 
-# ML Kit Configuration
-# ML_KIT_MIN_CONFIDENCE=0.85
+# MyScript Cloud API Configuration
+# Get your credentials from: https://developer.myscript.com
+MYSCRIPT_APPLICATION_KEY=your_myscript_application_key_here
+# MYSCRIPT_HMAC_KEY=your_myscript_hmac_key_here  # Optional: can disable for testing
+MYSCRIPT_MIN_CONFIDENCE=0.85
 
 # Validation Configuration
 # VALIDATION_CACHE_ENABLED=true
