feat: complete PR4 and PR5 - problem display, validation, and UI improvements
PR4: Problem Display & Math Rendering
- Add ProblemDisplay component with KaTeX rendering
- Create 25 linear equation problems (5 easy, 10 medium, 10 hard)
- Implement FormattedStep component for solution steps
- Add problem data management utilities
- Document problem data format

PR5: Math Validation & API Integration
- Integrate UpStudy API for step validation
- Create ValidationFeedback component with progressive hints
- Implement validationStore with Zustand
- Add storage utilities with MMKV caching
- Create mathValidation utilities for API calls

UI Improvements
- Add AppHeader component with "Write Math" branding
- Reposition RecognitionIndicator to top right (shows only math expression)
- Implement SafeAreaView for iOS status bar handling
- Add progressive hint system (concept → direction → micro)
- Switch to recognize endpoint (standard, best accuracy)
- Add Validate Step and Next Problem buttons
- Fix layout spacing and component positioning

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 # Handwriting Math App - Environment Variables Template
 # Copy this file to .env and fill in your actual values
 
-# CameraMath API Configuration (MVP)
-# Get your API key from: https://cameramath.com/api
+# CameraMath API Configuration (MVP - PR5)
+# Get your API key from: https://cameramath.com/api or contact support@cameramath.com
+# Free tier: $10 credits (~200-500 validation calls)
 CAMERAMATH_API_KEY=your_cameramath_api_key_here
 CAMERAMATH_API_URL=https://api.cameramath.com/v1
+CAMERAMATH_TIMEOUT_MS=5000
+CAMERAMATH_ENABLE_CACHING=true
 
 # Wolfram Alpha API Configuration (Production - Optional)
 # Get your API key from: https://products.wolframalpha.com/api/
