--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-katex": "^1.3.0",
+    "react-native-mmkv": "^3.3.3",
     "react-native-safe-area-context": "^5.5.2",
+    "react-native-webview": "^13.16.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -46,11 +49,13 @@
     "@react-native/typescript-config": "0.82.1",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
+    "@types/node": "^24.10.0",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
