--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "^2.29.1",
     "react-native-katex": "^1.3.0",
     "react-native-mmkv": "^3.3.3",
+    "react-native-reanimated": "^3.19.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-webview": "^13.16.0",
     "zustand": "^5.0.8"
