--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/native-stack": "^7.6.2",
     "@shopify/react-native-skia": "^2.3.10",
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
@@ -34,6 +36,7 @@
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "^3.19.3",
     "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.18.0",
     "react-native-webview": "^13.16.0",
     "zustand": "^5.0.8"
   },
