--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@sentry/react-native": "^7.5.0",
     "@shopify/react-native-skia": "^2.3.10",
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
@@ -51,6 +52,8 @@
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
     "@types/node": "^24.10.0",
@@ -58,6 +61,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "jest-environment-node": "^30.2.0",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.1.1",
