feat: PR13-16 Phase 1 - Infrastructure for collaboration, tutorial, and assessment modes
This commit implements the foundational infrastructure for three new features:
- PR13: Real-time teacher-student collaboration
- PR14: Tutorial mode with video lessons
- PR15: Assessment mode with deferred validation

**Type Definitions (600 lines)**
- app/types/Collaboration.ts - Teacher-student links, sessions, live strokes, presence
- app/types/Tutorial.ts - Video lessons, progress tracking, prerequisite unlocking
- app/types/Assessment.ts - Assessments, scoring (70% correct + 30% useful), batch validation

**Sync Clients (1,240 lines)**
- app/utils/sync/collaborationSync.ts - Invite codes, session management, ephemeral stroke sync
- app/utils/sync/tutorialSync.ts - Lesson fetching, video position tracking, progress sync
- app/utils/sync/assessmentSync.ts - Assessment submission, stroke compression, scoring formula

**Queue System Extensions**
- Extended app/utils/sync/queue.ts with 5 new queue item types
- Priority assignments: links (0), sessions/assessments (1), progress (2), strokes (3)
- Offline queue support with exponential backoff

**Environment Configuration**
- Added 11 new feature flags to .env.example
- Updated app/types/env.d.ts with TypeScript declarations
- Created .env with all feature flags ENABLED for pre-production testing

**Database Schema**
- Applied base schema (5 tables: sessions, attempts, steps, strokes, hints)
- Applied extensions schema (7 tables: teacher_student_links, collaboration_sessions,
  live_strokes, tutorial_lessons, tutorial_progress, assessments, assessment_strokes)
- 4 views for analytics and reporting
- 2 PostgreSQL functions for cleanup automation
- All RLS policies enabled for data security

**Dependencies**
- Added react-native-youtube-iframe@^2.3.0 for tutorial video playback
- npm dependencies installed successfully
- iOS pods installed (88 total) after fixing Xcode shellScript array bug

**Documentation**
- docs/PR13-16_PHASE1_C

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,12 @@ MYSCRIPT_APPLICATION_KEY=your_myscript_application_key_here
 # MYSCRIPT_HMAC_KEY=your_myscript_hmac_key_here  # Optional: can disable for testing
 MYSCRIPT_MIN_CONFIDENCE=0.85
 
+# UpStudy API Configuration (Math Validation)
+# Contact team for API credentials
+# UPSTUDY_API_KEY=your_upstudy_api_key_here
+# UPSTUDY_API_URL=https://api.upstudy.com/v1
+# UPSTUDY_TIMEOUT_MS=5000
+
 # Validation Configuration
 # VALIDATION_CACHE_ENABLED=true
 # VALIDATION_DEBOUNCE_MS=500
@@ -43,3 +49,32 @@ MYSCRIPT_MIN_CONFIDENCE=0.85
 # Development Settings
 # DEV_MENU_ENABLED=true
 # ENABLE_FLIPPER=false
+
+# Supabase Cloud Sync (PR12)
+# Get your project URL and anon key from: https://app.supabase.com/project/_/settings/api
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+ENABLE_CLOUD_SYNC=true
+SYNC_RETRY_MAX_ATTEMPTS=8
+SYNC_RETRY_DELAY_MS=1000
+
+# ============================================================================
+# PR13-16 FEATURE FLAGS
+# ============================================================================
+
+# Tutorial Mode (PR14)
+ENABLE_TUTORIAL_MODE=false
+TUTORIAL_VIDEO_PLATFORM=youtube
+TUTORIAL_CACHE_TTL_HOURS=24
+
+# Assessment Mode (PR15)
+ENABLE_ASSESSMENT_MODE=false
+ASSESSMENT_BATCH_VALIDATION_ENABLED=true
+ASSESSMENT_MAX_RETRIES=3
+ASSESSMENT_DEFAULT_TIME_LIMIT_SECONDS=600
+
+# Real-time Collaboration (PR13)
+ENABLE_COLLABORATION=false
+COLLABORATION_STROKE_CLEANUP_INTERVAL_MS=3600000
+COLLABORATION_SESSION_TIMEOUT_MS=3600000
+COLLABORATION_MAX_BROADCAST_RATE=100
