--- a/package.json
+++ b/package.json
@@ -17,54 +17,63 @@
     "test:coverage": "jest --coverage",
     "test:unit": "jest tests/unit",
     "test:component": "jest tests/component",
+    "build:ios": "./scripts/build-ios.sh",
     "clean": "rm -rf node_modules ios/Pods ios/build android/build android/app/build",
     "clean:ios": "cd ios && xcodebuild clean && cd ..",
     "postinstall": "cd ios && pod install && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native/new-app-screen": "0.82.1",
-    "@react-navigation/native": "^7.1.19",
-    "@react-navigation/native-stack": "^7.6.2",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "@sentry/react-native": "^7.5.0",
-    "@shopify/react-native-skia": "^2.3.10",
+    "@shopify/react-native-skia": "~1.5.6",
+    "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
-    "react": "19.1.1",
-    "react-native": "0.82.1",
-    "react-native-gesture-handler": "^2.29.1",
+    "pako": "^2.1.0",
+    "uuid": "^10.0.0",
+    "expo": "~52.0.0",
+    "expo-build-properties": "~0.12.0",
+    "expo-dev-client": "~5.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.0",
     "react-native-katex": "^1.3.0",
     "react-native-mmkv": "^3.3.3",
-    "react-native-reanimated": "^3.19.3",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.18.0",
+    "react-native-reanimated": "~3.15.4",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "~4.4.0",
     "react-native-webview": "^13.16.0",
+    "react-native-youtube-iframe": "^2.3.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.82.1",
-    "@react-native/eslint-config": "0.82.1",
-    "@react-native/metro-config": "0.82.1",
-    "@react-native/typescript-config": "0.82.1",
+    "@react-native-community/cli": "14.1.0",
+    "@react-native-community/cli-platform-android": "14.1.0",
+    "@react-native-community/cli-platform-ios": "14.1.0",
+    "@react-native/babel-preset": "0.76.6",
+    "@react-native/eslint-config": "0.76.6",
+    "@react-native/metro-config": "0.76.6",
+    "@react-native/typescript-config": "0.76.6",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
     "@types/node": "^24.10.0",
-    "@types/react": "^19.1.1",
-    "@types/react-test-renderer": "^19.1.0",
+    "@types/pako": "^2.0.3",
+    "@types/uuid": "^10.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "jest-environment-node": "^30.2.0",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "19.1.1",
+    "react-test-renderer": "18.3.1",
     "typescript": "^5.8.3"
   },
   "engines": {
