fix: add UIScene lifecycle configuration and EAS Update support
- Add UIApplicationSceneManifest to Info.plist to fix scene creation crash
- Configure EAS Update with preview channel for quick iterations
- Install and configure expo-updates plugin

--- a/app.json
+++ b/app.json
@@ -38,7 +38,8 @@
             "newArchEnabled": true
           }
         }
-      ]
+      ],
+      "expo-updates"
     ],
     "extra": {
       "eas": {
