--- a/eas.json
+++ b/eas.json
@@ -14,6 +14,7 @@
     },
     "preview": {
       "distribution": "internal",
+      "channel": "preview",
       "ios": {
         "resourceClass": "m-medium",
         "simulator": false
