--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo": "~52.0.0",
     "expo-build-properties": "~0.12.0",
     "expo-dev-client": "~5.0.0",
+    "expo-updates": "^29.0.12",
     "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
