--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Superbuilders <rafal.szulejko@superbuilders.school>",
   "license": "UNLICENSED",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "react-native start",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -34,7 +34,6 @@
     "expo": "~52.0.0",
     "expo-build-properties": "~0.12.0",
     "expo-dev-client": "~5.0.0",
-    "expo-updates": "^29.0.12",
     "pako": "^2.1.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
