feat: add audio hint narration with ElevenLabs TTS
Implement text-to-speech narration for hints using ElevenLabs API, giving
students audio feedback during problem solving. Includes UI controls,
credit monitoring, and automatic hint playback.

New Features:
- Audio hint narration using ElevenLabs TTS API
- Toggle audio on/off in FloatingToolbar and Settings
- LaTeX-to-speech conversion for math notation
- Credit usage tracking and display in Settings
- Automatic playback when new hints appear
- Audio state persisted to MMKV storage

New Files:
- app/hooks/useHintAudio.ts - Hook for automatic hint audio playback
- app/utils/elevenLabsClient.ts - ElevenLabs API client with TTS functions

Modified Files:
- app/components/FloatingToolbar.tsx - Add audio toggle button
- app/components/InlineMath.tsx - Support for audio-friendly rendering
- app/components/ValidationFeedback.tsx - Audio state awareness
- app/screens/SettingsScreen.tsx - Audio preferences and credit display
- app/screens/TrainingModeScreen.tsx - Initialize useHintAudio hook
- app/stores/uiStore.ts - Audio state management (enabled, playing)
- .env.example - ElevenLabs API configuration
- package.json - Add expo-av dependency for audio playback

Technical Details:
- Uses ElevenLabs API for high-quality TTS (10k chars/month free tier)
- Strips LaTeX formatting for cleaner speech output
- Automatically stops audio on unmount/hint change
- Voice settings: stability=0.6, similarity=0.8, style=0.3
- Default voice: Sarah (EXAVITQu4vr4xnSDxMaL) - friendly female
- Supports multiple voice options via configuration
- Audio plays in silent mode on iOS (playsInSilentModeIOS: true)

Usage:
1. Add ELEVENLABS_API_KEY to .env
2. Enable audio in Settings or FloatingToolbar
3. Audio automatically plays when hints appear
4. Monitor remaining credits in Settings screen

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ APP_ENV=development
 
 # Feature Flags (Optional)
 # ENABLE_OFFLINE_MODE=true
-# ENABLE_VOICE_HINTS=false
+ENABLE_VOICE_HINTS=true
 # ENABLE_CLOUD_SYNC=false
 
 # MyScript Cloud API Configuration
@@ -34,6 +34,20 @@ APP_ENV=development
 MYSCRIPT_APPLICATION_KEY=your_myscript_application_key_here
 # MYSCRIPT_HMAC_KEY=your_myscript_hmac_key_here  # Optional: can disable for testing
 MYSCRIPT_MIN_CONFIDENCE=0.85
+
+# ElevenLabs TTS API Configuration (PR13 - Voice Hints)
+# Get your API key from: https://elevenlabs.io/
+# Free tier: 10,000 characters/month
+# Pricing: https://elevenlabs.io/pricing
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_VOICE_ID=EXAVITQu4vr4xnSDxMaL  # Sarah (friendly female voice)
+ELEVENLABS_MODEL_ID=eleven_monolingual_v1  # Fast, efficient model
+
+# Popular voice options:
+# Sarah (friendly female): EXAVITQu4vr4xnSDxMaL
+# Adam (deep male): pNInz6obpgDQGcFmaJgB
+# Rachel (calm female): 21m00Tcm4TlvDq8ikWAM
+# Browse more: https://elevenlabs.io/voice-library
 
 # UpStudy API Configuration (Math Validation)
 # Contact team for API credentials
