--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
     "expo": "~52.0.0",
+    "expo-av": "~15.0.2",
     "expo-build-properties": "~0.12.0",
     "expo-dev-client": "~5.0.0",
     "pako": "^2.1.0",
